2009-01-xx:
    * version 0.6.10
    * Disable custom window titles by default
    * Ten On A Diet CSS no longer uses external images
    * Fix topic creator highlighting beyond the first page when topic creator
      labeling is disabled
    * Tracked topics are now integrated into GameFOX
    * Disable all tag-related preferences by default
    * Numerous performance improvements
    * New CSS: Capitalized Message Links
    * Add board links above QuickPost on message lists
    * Drop Firefox 1.5 support
    * Add menu item to open the Highlighting options pane from the context menu
      (right click message -> Highlighting Groups -> Edit Groups)
    * Add "Update GameFOX Signature" button to the GameFAQs signature/quote
      page
    * Support double-click CSS descriptions in the Style options pane in
      Firefox 2
    * Update signature options interface:
        - Move "new signature" menu item to an "Add" button
        - Two simple selection modes: "random" (now default) and "first"
        - "Save to GameFAQs" button to save your GameFOX signature to GameFAQs
    * Ability to highlight topics or posts which have certain words in the
      title or message
    * New CSS: Hide Signatures

2008-12-26:
    * version 0.6.9
    * More configurable HTML button display options
    * Add keyboard shortcuts to HTML buttons
    * Label current logged-in account in the account switcher
    * Allow highlighting of the topic creator with the user lists feature

2008-12-23:
    * version 0.6.8
    * Fix manual topic pagination
    * Cache favorite boards when on board index page; show in context menu,
      sidebar, and GameFAQs header
    * Scroll to appropriate location when filtering/unfiltering
    * Improved Ricapar Classic CSS; now compatible with Firefox 3.1
    * Workaround Firefox 3 bug that breaks QuickPost and other features when
      third-party cookies are blocked
    * Restore QuickPost reset button with additional functionality